# SnakeSh

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scripts/: build_linux.sh  build_linux_release_container.sh  build_macos.sh  build_oui_snapshot.py  build_windows.ps1  generate_macos_icon.sh  generate_tool_icons.py  import_macos_signing_cert.sh  install.sh  make_checksums.sh  merge_vendor_oui_export.py  notarize_macos.sh  package_linux_appimage.sh  package_macos.sh  sign_macos.sh  sign_windows.ps1
tests/: test_app.py  test_backup_service.py  test_bootstrap.py  test_build_oui_snapshot.py  test_color_picker.py  test_credential_service.py  test_desktop_open.py  test_diff_tool_dialog.py  test_file_hash_dialog.py  test_file_hash_service.py  test_help_dialog.py  test_hostkeys.py  test_linux_desktop_install_service.py  test_local_shell_worker.py  test_main_entrypoint.py  test_main_instance_service.py  test_master_password_service.py  test_merge_vendor_oui_export.py  test_models.py  test_mtr_trace.py  test_mtu_calculator_dialog.py  test_mtu_tools.py  test_network_inspector.py  test_network_inspector_dialog.py  test_network_tools.py  test_network_tools_dialog.py  test_nomachine.py  test_oui_service.py  test_packaged_tool_runtime_smoke.py  test_packaging_spec.py  test_password_generator.py  test_paths.py  test_platform_deps.py  test_privilege_service.py  test_rdp.py  test_remote_viewer_tab.py  test_resource_monitor_dialog.py  test_resource_monitor_service.py  test_runtime.py  test_secrets_service.py  (+30 more)
(+152 files in other folders)
